--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       name="keywords"
       content="Desenvolvedor de Sistemas, sites, app, Fortaleza/CE, Developer of Systems, websites, app, aplicativos, sistemas web Fortaleza/CE"
     />
-    <link rel="canonical" href="meusite" />
+    <link rel="canonical" href="https://romiltoncosta.vercel.app/" />
     <meta property="og:locale" content="pt_BR" />
     <meta property="og:type" content="website" />
     <meta
@@ -28,7 +28,7 @@
       content="Desenvolvedor de Sistemas, sites, app, Fortaleza/CE, Developer of Systems, websites, app, aplicativos, sistemas web Fortaleza/CE"
     />
     <link rel="shortcut icon" href="img/Rc.png" type="image/x-icon">
-    <meta property="og:url" content="meusite" />
+    <meta property="og:url" content="https://romiltoncosta.vercel.app/" />
     <meta property="og:site_name" content="Romilton costa Portfólio" />
     <meta name="author" content="Romilton costa -+5585981241987" />
     <link href="" rel="icon" />
@@ -49,7 +49,7 @@
     <header class="header">
       <nav class="navbar sticky">
         <div class="logo">
-          <a href="meusite" class="logoh">
+          <a href="https://romiltoncosta.vercel.app/" class="logoh">
              RC DEV
           </a>
         </div>
@@ -71,7 +71,7 @@
         <div class="about-container">
           <div class="about-left">
             <div class="about-img">
-              <img class="grow" src="./img/imagem.jpg" alt="about-img" />
+              <img class="grow" src="imagem.jpg" alt="about-img" />
             </div>
           </div>
           <div class="about-right">
@@ -93,7 +93,7 @@
         </div>
         <div class="card">
           <img
-            src="./img/signlogin.PNG"
+            src="signlogin.PNG"
             alt="tela de login"
           />
           <div class="details">
