--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
       property="og:description"
       content="Desenvolvedor de Sistemas, sites, app, Fortaleza/CE, Developer of Systems, websites, app, aplicativos, sistemas web Fortaleza/CE"
     />
-    <link rel="shortcut icon" href="img/Rc.png" type="image/x-icon">
     <meta property="og:url" content="https://romiltoncosta.vercel.app/" />
     <meta property="og:site_name" content="Romilton costa Portfólio" />
     <meta name="author" content="Romilton costa -+5585981241987" />
-    <link href="" rel="icon" />
+    <link href="Rc.png" rel="icon" />
     <link rel="stylesheet" href="./css/style.css" />
     <!-- box icons -->
     <link
