--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta property="og:site_name" content="Romilton costa Portfólio" />
     <meta name="author" content="Romilton costa -+5585981241987" />
     <link href="Rc.png" rel="icon" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <!-- box icons -->
     <link
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
@@ -199,6 +199,6 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
-    <script src="./js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
