--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           />
           <div class="details">
               <h5>App de clima</h5>
-               <p>
+               <p>Estar em processo de desenvolvimento , prazo 2 dias .
               App de clima em tempo real 
                </p>
               <p>React native</p>
