--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         </div>
         <ul>
           <li><a href="#home">home</a></li>
+          <li><a href="#skills">Skills</a></li>
           <li><a href="#portfolio">portfolio</a></li>
           <li><a href="#contato">contato</a></li>
         </ul>
@@ -85,6 +86,23 @@
             </p>
           </div>
         </div>
+      </section>
+      <section class="skills" id="skills">
+        <div class="skills-section-title">
+          <h2>SKills</h2>
+        </div>
+        
+          <div class="skills-section">
+            <ul class="skills-list">
+              <li>Html5</li>
+              <li>Css3</li>
+              <li>Javascript</li>
+              <li>React Js</li>
+              <li>React Native</li>
+              <li>Mysql</li>
+              <li>Node js</li>
+            </ul>
+          </div>
       </section>
       <section class="portfolio" id="portfolio">
         <div class="portfolio-section-title">
