--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <ul>
           <li><a href="#home">home</a></li>
           <li><a href="#skills">Skills</a></li>
-          <li><a href="#portfolio">portfolio</a></li>
+          <li><a href="#portfolio">Projects</a></li>
           <li><a href="#contato">contato</a></li>
         </ul>
       </nav>
@@ -106,7 +106,7 @@
       </section>
       <section class="portfolio" id="portfolio">
         <div class="portfolio-section-title">
-          <h2>Portifólio</h2>
+          <h2>Projects</h2>
         </div>
         <div class="card">
           <img
