--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
     />
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-GLhlTQ8iMYY7e3RvRNp4f5f5XdMqDShjMkZQ9F5R5jtwC10wOa8b1a5lD5dNdmfN" crossorigin="anonymous">
     <title>Romilton costa Portfólio</title>
   </head>
 
@@ -94,13 +95,14 @@
         
           <div class="skills-section">
             <ul class="skills-list">
-              <li>Html5</li>
-              <li>Css3</li>
-              <li>Javascript</li>
-              <li>React Js</li>
-              <li>React Native</li>
-              <li>Mysql</li>
-              <li>Node js</li>
+              <li><i class="fa-brands fa-html5"></i>Html5</li>
+              <li><i class="fa-brands fa-css3"></i>Css3</li>
+              <li><i class="fa-brands fa-js"></i>Javascript</li>
+              <li><i class="fa-brands fa-react"></i>React Js</li>
+              <li><i class="fa-brands fa-react"></i>React Native</li>
+              <li><i class="fa-solid fa-database"></i>Mysql</li>
+              <li><i class="fa-brands fa-node"></i>Node js</li>
+              <li><i class="fa-brands fa-figma"></i>Figma</li>
             </ul>
           </div>
       </section>
