--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
     />
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-GLhlTQ8iMYY7e3RvRNp4f5f5XdMqDShjMkZQ9F5R5jtwC10wOa8b1a5lD5dNdmfN" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/53329820bb.js" crossorigin="anonymous"></script>
     <title>Romilton costa Portfólio</title>
   </head>
 
