--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         
           <div class="skills-section">
             <ul class="skills-list">
-              <li><i class="fa-brands fa-html5" style="color: #f5f7fa; margin-left:1rem;"></i>Html5</li>
+              <li><i class="fa-brands fa-html5" style="color: #f5f7fa; margin-right:1rem;"></i>Html5</li>
               <li><i class="fa-brands fa-css3" style="color: #f5f7fa;"></i>Css3</li>
               <li><i class="fa-brands fa-js" style="color: #f5f7fa;"></i>Javascript</li>
               <li><i class="fa-brands fa-react" style="color: #f5f7fa;"></i>React Js</li>
