--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
         
           <div class="skills-section">
             <ul class="skills-list">
-              <li><i class="fa-brands fa-html5" style="color: #f5f7fa; margin-right:1rem;"></i>Html5</li>
-              <li><i class="fa-brands fa-css3" style="color: #f5f7fa;"></i>Css3</li>
-              <li><i class="fa-brands fa-js" style="color: #f5f7fa;"></i>Javascript</li>
-              <li><i class="fa-brands fa-react" style="color: #f5f7fa;"></i>React Js</li>
-              <li><i class="fa-brands fa-react" style="color: #f5f7fa;"></i>React Native</li>
-              <li><i class="fa-solid fa-database" style="color: #f5f7fa;"></i>Mysql</li>
-              <li><i class="fa-brands fa-node" style="color: #f5f7fa;"></i>Node js</li>
-              <li><i class="fa-brands fa-figma" style="color: #f5f7fa;"></i>Figma</li>
+              <li><i class="fa-brands fa-html5" ></i>Html5</li>
+              <li><i class="fa-brands fa-css3" ></i>Css3</li>
+              <li><i class="fa-brands fa-js" ></i>Javascript</li>
+              <li><i class="fa-brands fa-react" ></i>React Js</li>
+              <li><i class="fa-brands fa-react" ></i>React Native</li>
+              <li><i class="fa-solid fa-database" ></i>Mysql</li>
+              <li><i class="fa-brands fa-node" ></i>Node js</li>
+              <li><i class="fa-brands fa-figma" ></i>Figma</li>
             </ul>
           </div>
       </section>
