--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
         </div>
         <div class="copyright">
-          <p>© Copyright <span>Romilton costa</span>. All Rights Reserved</p>
+          <p>© Copyright | All Rights Reserved</p>
         </div>
       </div>
     </footer>
